--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,9 @@
 			<li><a href="">Blog</a></li>
 			<li><a href="">Contact</a></li>
 		</ul>
+		<div class="ssites">
+			a
+		</div>
 	</div>
 	
 </body>
