--- a/app/index.html
+++ b/app/index.html
@@ -6,17 +6,65 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
 	<div class="header">
-		<ul class="menu-main">
-			<li><a href="" class="current">Work</a></li>
-			<li><a href="">About</a></li>
-			<li><a href="">Blog</a></li>
-			<li><a href="">Contact</a></li>
+		<div class="header-top">
+			<ul class="menu-main">
+				<li><a href="" class="current">Home</a></li>
+				<li><a href="">Pages</a></li>
+				<li><a href="">Features</a></li>
+				<li><a href="">Extensins</a></li>
+				<li><a href="">Tutorials</a></li>
+				<li><a href="">Contact us</a></li>
 		</ul>
-		<div class="ssites">
-			a
+			<a>
+				<img src="images/logo1.png"  class="logo">
+			</a>
+
+			<div class="ssites">
+				<a href="#facebook.com"><img src="" alt=""></a>
+				<a href="twiter.com"><img src="" alt=""></a>
+				<a href="skype.com"><img src="" alt=""></a>
+				<a href="instagram.com"><img src="" alt=""></a>
+			</div>
+
+		</div>
+
+		<div class="text">
+			<span class="textcenter"><strong>CREATIVES</strong></span>
+			<p class="textlittle">POWER BY PSDFRIBIES.COM</p>
 		</div>
 	</div>
-	
+
+	<div class="maine">
+
+		<div class="textmaine">
+			<h1>WE ARE AN AWESOME AGENCY</h1>
+		</div>
+
+		<div class="catalog">
+
+			<div class="item">
+				<img src="images/catalogimg.png"/>
+				<div></div>
+				<div></div>
+			</div>
+			<div class="item">
+				<img src="images/catalogimg.png"/>
+				<div></div>
+				<div></div>
+			</div>
+			<div class="item">
+				<img src="images/catalogimg.png"/>
+				<div></div>
+				<div></div>
+			</div>
+			<div class="item">
+				<img src="images/catalogimg.png"/>
+				<div></div>
+				<div></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
